@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>WSO2 Carbon - Integration Test Module</name>
-    <artifactId>tests</artifactId>
+    <artifactId>org.wso2.carbon.kernel.integration.test</artifactId>
 
     <build>
         <plugins>
@@ -19,6 +19,10 @@
                 <inherited>false</inherited>
                 <configuration>
                     <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
+                    <!--<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m
+                        -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE
+                        -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
+                    </argLine> -->
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng-server-mgt.xml</suiteXmlFile>
                         <!--<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
